# imu_encoder_fusion

./: ekf_fusion.h  main.cpp  test  test_data1.txt
encoder_only/: main.cpp  test
fusion/: ekf_fusion.h  main.cpp  test
fusion2/: ekf_fusion.h  main.cpp  test
fusion3/: CMakeLists.txt  main.cpp
fusion3/include/: ekf_fusion.h  file_read.h
imu_only/: ekf_fusion.h  main.cpp  test
time_stamp_synchronize/: main.cpp  test  time_synchronize.h
true_odom/: main.cpp  odom_data.txt  test
